<resources>
    <string name="app_name">warehousesui</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome! "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout">Logout</string>
    <string name="goodbye">Goodbye, </string>
    <string name="user_name">User Name</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="no_network">No network available</string>
    <string name="warehouses">Warehouses</string>
    <string name="users">Users</string>
    <string name="sale_agents">Sale agents</string>
    <string name="owners">Owners</string>
    <string name="base_url">http://10.0.2.2:8080</string>
    <string name="save">Save</string>
    <string name="role">Role</string>
    <string name="id">Id</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="user_updated">User updated</string>
    <string name="user_created">User created</string>
    <string name="user_role_missing">User must have at least one role</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="rating">Rating</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="unique_id_egn">Unique ID (EGN)</string>
    <string name="fee">Fee</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="owner_created">Owner Created</string>
    <string name="owner_updated">Owner Updated</string>
    <string name="tenant_updated">Tenant Updated</string>
    <string name="tenant_created">Tenant Created</string>
    <string name="sale_agent_cerated">Sale Agent Created</string>
    <string name="sale_agent_updated">Sale Agent Updated</string>
    <string name="warehouse_contracts">Warehouse contracts</string>
    <string name="warehouse_requests">Warehouse Requests</string>
    <string name="area">Area</string>
    <string name="category">Category</string>
    <string name="type">Type</string>
    <string name="additional_data">Additional data</string>
    <string name="owner">Owner</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="lenght">Lenght</string>
    <string name="choose_type">Choose a Warehouse type</string>
    <string name="choose_category">Choose a Warehouse category</string>
    <string name="warehouse_created">Warehose created</string>
    <string name="warehouse_updated">Warehouse updated</string>
    <string name="price_per_month">Price per Month</string>
    <string name="warehouse">Warehouse</string>
    <string name="tenant">Tenant</string>
    <string name="lease_request">Lease request</string>
    <string name="leased_at">Leased at</string>
    <string name="leased_till">Leased till</string>
    <string name="total_price">Total Price</string>
    <string name="date_format">MMM YYYY</string>
    <string name="months">Months</string>
    <string name="mandatory_dates">Start and end dates are mandatory!</string>
    <string name="leaseContract_updated">Leasing Contract updated.</string>
    <string name="leaseContract_created">Leasing Contract Created.</string>
    <string name="leased_at_less_than_leased_till">Leased At month must be before Leased Till</string>
    <string name="inspect">Inspect</string>
    <string name="notifications">Notifications</string>
    <string name="new_lease_requests">Show new Lease requests</string>
    <string name="lease_contracts_about_to_expire">Show lease contracts about to expire</string>
    <string name="currently_leased_warehouses">Show currently leased warehouses</string>
    <string name="search_contracts">Search contracts</string>
    <string name="report_for_sale_agent_contracts">Report for contracts made for sale agent in time frame</string>
    <string name="make_another_report">Make Another Report</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="tenant_history">Tenant History</string>
    <string name="get_free_warehouses">Get Free Warehouses</string>
    <string name="report_free_warehouses">Report free warehouses</string>
    <string name="make_lease_request">Make lease request</string>
    <string name="warehouse_type">Warehouse Type</string>
</resources>
