<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ui.loggedin.LoggedInActivity">


    <Button
        android:id="@+id/users"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:onClick="openUsers"
        android:text="@string/users"
        android:visibility="gone" />

    <Button
        android:id="@+id/warehouse_contracts"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:onClick="openLeasingContracts"
        android:text="@string/warehouse_contracts"
        android:visibility="gone" />

    <Button
        android:id="@+id/warehouses"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:onClick="openWarehouses"
        android:text="@string/warehouses"
        android:visibility="gone" />

    <TextView
        android:id="@+id/text_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notifications"
        android:visibility="gone" />

    <TextView
        android:id="@+id/text_lease_requests_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_lease_requests"
        android:visibility="gone" />

    <ListView
        android:id="@+id/lease_requests_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TextView
        android:id="@+id/text_expired_leases_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lease_contracts_about_to_expire"
        android:visibility="gone" />

    <ListView
        android:id="@+id/expired_leases_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/text_currently_leased_warehouses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/currently_leased_warehouses"
        android:visibility="gone" />

    <ListView
        android:id="@+id/currently_leased_warehouses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

</LinearLayout>